add search static

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: Avenir;
+  margin: 0;
   /* border: 1px solid red; */
 }
 
@@ -9,4 +10,20 @@ nav {
   justify-content: right;
   align-items: center;
   gap: 20px;
+}
+
+.filters {
+  height: 50px;
+  background: slategray;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#search {
+  height: 20px;
+  width: 400px;
+  border: 1px solid gray;
+  border-radius: 100px;
+  text-indent: 10px;
 }
