--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,30 @@ nav {
   align-items: center;
   gap: 20px;
 }
+
 .new-note_container {
     border: 1px solid grey;
-    padding: 15px 20px;
+    padding: 5px 20px;
+    margin: 40px;
 }
 
 .new-note-heading {
+    padding: 0px;
+    margin: 0px;
     font-size: 75px;
+}
+
+.new-note_form {
+    display: grid;
+    grid-template: repeat(auto, 4) / repeat(auto, 2);
+}
+
+.new-note-preview {
+    border: 1px solid grey;
+    grid-column: 2;
+    grid-row: 1 / span 3;
+}
+
+.new-note_submit {
+    
 }
