--- a/src/components/NewNote.css
+++ b/src/components/NewNote.css
@@ -2,31 +2,41 @@
     border: 1px solid grey;
     padding: 5px 20px;
     margin: 40px;
+    border-radius: 5px;
 }
 
 .new-note-heading {
     padding: 0px;
-    margin: 0px 0px 30px 0px;
+    margin: 0px auto 30px auto;
     font-size: 75px;
+    width: max-content;
 }
 
 .new-note_form {
     display: grid;
-    grid-template: auto / 50% 50%;
+    grid-template-columns: 50% 50%;
+    margin-bottom: 20px;
+}
+
+.column-one {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
 }
 
 .new-note-preview {
     border: 1px solid grey;
+    margin: none;
     padding: 5%;
     border-radius: 15px;
-    height: 500px;
-    width: 95%;
-    display: block;
+    width: calc(100% - 10%);
+    height: max-content;
     overflow: auto;
+    box-sizing: border-box;
 }
 
 .new-note-preview p {
-    max-width: 100%;
+    width: 100%;
     word-wrap: break-word;
 }
 
@@ -46,22 +56,11 @@
     color: black;
 }
 
-.column-one {
-    display: flex;
-    flex-direction: column;
-}
-
-.body {
-  height: 250px;
-  width: 75%;
-  resize: none;
-  overflow: auto;
-}
-
 .column-two {
     display: flex;
     flex-direction: column;
     align-items: end;
+    width: 90%;
 }
 
 .new-note_input {
@@ -69,4 +68,11 @@
     border-radius: 5px;
     border: 1px solid grey;
     padding: 5px;
+}
+
+.body {
+  height: 250px;
+  width: 100%;
+  resize: none;
+  overflow: auto;
 }
