--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -25,6 +25,7 @@
     width: 100px;
     padding: 10px 20px;
     border: none;
+    border-radius: 50px;
     color: white;
     font-size: 16px;
     cursor: pointer;
