--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,15 @@
 
 body{
   margin: 0;
+  /* min-height: fit-content; */
 }
 
-.root {
-  height: 100vh;
-
+#root {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
 }
 
 main {
+  margin: 20px;
 }
