--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,11 @@
 footer {
   width: 100%;
-  height: 50px;
+  height: 75px;
   color: white;
   background: slategray;
-  padding: 20px;
+  /* padding: 0 20px; */
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   text-align: center;
+  align-items: center;
 }
