--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -1,23 +1,17 @@
 .note-display {
+  height: 500px;
   margin: 40px auto;
   display: grid;
-  grid-template-rows: auto 3.5fr auto auto; 
+  grid-template-rows: auto 3fr auto auto; 
   width: 80%; 
   border: 1px solid lightgray;
   padding: 20px;
-}
-
-h2 {
-  height: fit-content;
-  /* margin: none; */
 }
 
 .note-display .category {
   font-style: italic;
   color: gray;
 }
-
-
 
 .button-group {
   display: flex;
@@ -43,6 +37,7 @@ h2 {
 .button-group .delete {
   background-color: red;
 }
+
 
 .return-arrow {
   position: absolute;
