--- a/src/components/Notes.css
+++ b/src/components/Notes.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  gap: 20px;
+  column-gap: 20px;
+  row-gap: 20px;
 }
 
 a {
